# tradedev

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  railway.toml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  accountant.py  base.py  factory.py  ops_manager.py  qa_manager.py  registry.py
backend/app/agents/traders/: arbitrage.py  base_trader.py  grid.py  mean_reversion.py  momentum.py  sentiment.py
backend/app/ai/: base_provider.py  claude_provider.py  gemini_provider.py  openai_provider.py  prompt_builder.py  registry.py
backend/app/api/: routes_agents.py  routes_ai.py  routes_portfolio.py  routes_users.py
backend/app/chain/: __init__.py  messages.py  tradechain.py
backend/app/exchange/: adapter.py  live.py  manager.py  mock.py
backend/app/models/: database.py  trade.py  user.py
backend/app/security/: auth.py  vault.py
backend/app/websocket/: manager.py
backend/tests/: test_adversarial.py  test_agents.py  test_chain.py  test_exchange.py  test_fleet.py  test_managers.py  test_security.py
frontend/: vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AgentCard.tsx  AgentNetwork.tsx  Dashboard.tsx  KeyVault.tsx  MessageFeed.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: agents.ts
